bitcoin-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitcoin-service
  template:
    metadata:
      labels:
        app: bitcoin-service
    spec:
      containers:
      - name: bitcoin-service
        image: simonregistry.azurecr.io/bitcoin_service:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: bitcoin-service
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: bitcoin-service
  type: ClusterIP
