hello-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      containers:
      - name: hello-service
        image: simonregistry.azurecr.io/hello_service:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: hello-service
  type: ClusterIP
